# rust-static-multiversions

./: Cargo.toml
src/: main.rs
src/lib/: Cargo.toml
src/lib/src/: lib.rs
