[package]
name = "rust-static-multiversions"
version = "0.1.0"
edition = "2021"

[dependencies]
lib = { git = "https://github.com/cove/rust-static-multiversions.git", package = "lib", version = "^0.1.0"}
lib_compat1 = { git = "https://github.com/cove/rust-static-multiversions.git", package = "lib", version = "^0.2.0"}
