[package]
name = "rust-static-multiversions"
version = "0.1.0"
edition = "2021"

[dependencies]
lib = { git = "https://github.com/cove/rust-static-multiversions.git", tag = "v0.1.0", package = "lib"}
lib_compat1 = { git = "https://github.com/cove/rust-static-multiversions.git", tag = "v0.2.0", package = "lib"}
